--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@ and a history of successful contributions in the field
                 <p class="s-description text-center">
                   Audio Creation include Recording, editing, mixing, and mastering audio in Rock and Heavy Music
                 </p>
+                <br>
               </div>
             </div>
           </div>
@@ -468,7 +469,7 @@ and a history of successful contributions in the field
                            
                           </div>
                           <div class="col-md-12 text-center">
-                            <button type="submit" name="submit" class="button button-a button-big button-rouded">Send Message</button>
+                            <button type="submit" name="submit" class="button button-a button-big button-rouded" data-toggle="modal" data-target="#exampleModal">Send Message</button>
                           </div>
                         </div>
                       </form>
@@ -568,7 +569,7 @@ and a history of successful contributions in the field
             message: document.getElementById('message').value
         });
      
-        alert('Your form is submitted');
+        alert('Your form is submitted to Ashraf!');
         document.getElementById('frmContact').reset();
     });
     </script>
